--- a/appinfo.json
+++ b/appinfo.json
@@ -7,7 +7,23 @@
     "longName": "Reloj Javier Iglesias",
     "projectType": "native",
     "resources": {
-        "media": []
+        "media": [
+            {
+                "file": "images/RelojJavier.png",
+                "name": "IMAGEN_PRINCIPAL",
+                "targetPlatforms": [
+                    "basalt"
+                ],
+                "type": "bitmap"
+            },
+            {
+                "file": "images/RelojJavier_28_28.png",
+                "menuIcon": true,
+                "name": "ICONO_MENU",
+                "targetPlatforms": null,
+                "type": "bitmap"
+            }
+        ]
     },
     "sdkVersion": "3",
     "shortName": "Reloj_Javier",
